# iris-grib

./: .cirrus.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .lycheeignore  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yml  noxfile.py  pyproject.toml  readthedocs.yml  setup.py
.github/: dependabot.yml
.github/workflows/: ci-docs-linkcheck.yml  ci-docs-tests.yml  ci-linkchecks.yml  ci-manifest.yml  ci-template-check.yml  ci-tests.yml  refresh-lockfiles.yml
.github/workflows/composite/cartopy-cache/: action.yml
.github/workflows/composite/conda-env-cache/: action.yml
.github/workflows/composite/conda-pkg-cache/: action.yml
.github/workflows/composite/iris-data-cache/: action.yml
.github/workflows/composite/nox-cache/: action.yml
docs/: Makefile  conf.py  index.rst  make.bat  release_notes.rst
docs/_static/: expand.js
docs/explanation/: index.rst  phenom_translation.rst
docs/how_to/: get_started.rst  index.rst  modify_during_load.rst  simple_grib_io.rst
docs/ref/: index.rst  release_notes.rst
docs/ref/grib_phenom_translation/: grib_phenom_translation.rst
docs/reference/: index.rst  release_notes.rst
docs/tutorial/: index.rst  load_save_api.rst
formerly_docs/: conf.py  index.rst  make.bat
formerly_docs/ref/: iris_grib.rst
formerly_docs/ref/grib_phenom_translation/: grib_phenom_translation.rst
formerly_docs/ref/message/: message.rst
iris_grib/: __init__.py  _deprecation.py  _grib1_load_rules.py  _grib_cf_map.py  _iris_mercator_support.py  _load_convert.py  _save_rules.py  grib_phenom_translation.py  grib_save_rules.py  load_rules.py  message.py
iris_grib/grib_phenom_translation/: __init__.py  _gribcode.py
iris_grib/test_data/: faked_sample_hh_grib_data.grib2
iris_grib/tests/: .pep8_test_exclude.txt  __init__.py  test_license_headers.py  test_pep8.py
iris_grib/tests/integration/: __init__.py
iris_grib/tests/integration/format_interop/: __init__.py  test_name_grib.py  test_pp_grib.py
iris_grib/tests/integration/iris_integration/: __init__.py  test_callback.py  test_pickle_message.py
iris_grib/tests/integration/load_convert/: __init__.py  test_data_section.py  test_load_hybrid_coords.py  test_load_hybrid_height.py  test_load_hybrid_pressure.py  test_product_definition_section.py  test_sample_file_loads.py
iris_grib/tests/integration/round_trip/: __init__.py  test_WAFC_mapping_round_trip.py  test_grid_definition_section.py  test_hybrid_coords_round_trip.py  test_product_definition_section.py
iris_grib/tests/integration/save_rules/: __init__.py  test_grib_save.py  test_grid_definition_section.py  test_save_hybrid_coords.py  test_save_hybrid_height.py  test_save_hybrid_pressure.py
iris_grib/tests/runner/: __init__.py  __main__.py  _runner.py
iris_grib/tests/testdata/: CAT_T+24_0600.grib2  CB_T+24_0600.grib2  INCLDTURB_T+24_0600.grib2  faked_sample_hp_grib_data.grib2  faked_surface_pressure.grib2  hybrid_height.nc  hybrid_pressure.nc
iris_grib/tests/unit/: __init__.py  test_GribWrapper.py  test__load_generate.py  test_as_messages.py  test_load_cubes.py  test_load_pairs_from_fields.py  test_save_grib2.py  test_save_messages.py
iris_grib/tests/unit/grib1_load_rules/: __init__.py  test_grib1_convert.py  test_grib1_load_translations.py
iris_grib/tests/unit/grib_phenom_translation/: __init__.py  test_grib_phenom_translation.py  test_timecodes.py
iris_grib/tests/unit/load_convert/: __init__.py  test__hindcast_fix.py  test_bitmap_section.py  test_calculate_increment.py  test_convert.py  test_data_cutoff.py  test_data_representation_section.py  test_ellipsoid.py  test_ellipsoid_geometry.py  test_ensemble_identifier.py  test_ensemble_type.py  test_fixup_float32_from_int32.py  test_fixup_int32_from_uint32.py  test_forecast_period_coord.py  test_generating_process.py  test_grib2_convert.py  test_grid_definition_template_0_and_1.py  test_grid_definition_template_10.py  test_grid_definition_template_12.py  test_grid_definition_template_140.py  test_grid_definition_template_20.py  test_grid_definition_template_30.py  test_grid_definition_template_40.py  test_grid_definition_template_4_and_5.py  test_grid_definition_template_5.py  test_grid_definition_template_90.py  test_other_time_coord.py  test_product_definition_6.py  test_product_definition_section.py  test_product_definition_template_0.py  test_product_definition_template_1.py  test_product_definition_template_10.py  test_product_definition_template_11.py  test_product_definition_template_15.py  test_product_definition_template_31.py  test_product_definition_template_32.py  test_product_definition_template_40.py  test_product_definition_template_6.py  test_product_definition_template_8.py  test_product_definition_template_9.py  (+12 more)
iris_grib/tests/unit/load_rules/: test_convert.py
iris_grib/tests/unit/message/: __init__.py  test_GribMessage.py  test_Section.py  test__DataProxy.py  test__MessageLocation.py  test__RawGribMessage.py
iris_grib/tests/unit/save_rules/: __init__.py  test__missing_forecast_period.py  test__non_missing_forecast_period.py  (+28 more)
lib/iris/: __init__.py
lib/iris/fileformats/: __init__.py
lib/iris/tests/: __init__.py  test_grib_load.py  test_grib_phenomenon_translations.py  test_grib_save.py  test_grib_save_rules.py
lib/iris_grib/: _grib_cf_map.py  grib_phenom_translation.py  message.py
requirements/: all.txt  core.txt  py310.yml  py311.yml  py312.yml  py313.yml  py314.yml  py39.yml  pypi-core.txt  pypi-optional-dev.txt  pypi-optional-test.txt  readthedocs.yml  setup.txt  test.txt
requirements/ci/: py36.yml  py37.yml  py38.yml  readthedocs.yml
src/iris_grib/: __init__.py  _grib1_convert.py  _grib1_load_rules.py  _grib2_convert.py  _grib_cf_map.py  _load_convert.py  _save_rules.py  message.py
src/iris_grib/_grib1_legacy/: __init__.py  grib1_load_rules.py  grib_wrapper.py
src/iris_grib/grib_phenom_translation/: __init__.py  _gribcode.py
src/iris_grib/tests/: __init__.py  conftest.py  test_license_headers.py
(+354 files in other folders)
